# Exploration-with-Global-Consistency

./: NOTE  README.md  dev_log.md
exploration_planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp  heading_planner.cpp  traj_visibility.cpp
exploration_planner/bspline_opt/: CMakeLists.txt
exploration_planner/exploration_manager/launch/: algorithm.xml  algorithm_sim.xml  exp_bag.launch  exploration.launch  exploration_sim.launch  exploration_vins.launch  simulator.xml
exploration_planner/exploration_manager/src/: exploration_node.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp
exploration_planner/path_searching/src/: astar2.cpp  kinodynamic_astar.cpp
exploration_planner/plan_env/: CMakeLists.txt  package.xml
exploration_planner/plan_env/src/: map_ros.cpp  marching_cubes.cpp  perception_utils_map.cpp  raycast.cpp  sdf_map.cpp  sdf_map_test.cpp  visualization_utils.cpp
exploration_planner/plan_manage/config/: traj.rviz
exploration_planner/plan_manage/launch/: simulator.xml
exploration_planner/plan_manage/src/: planner_manager.cpp  (+2 more)
exploration_planner/utils/set_cover_solver/: CMakeLists.txt  package.xml
exploration_planner/utils/set_cover_solver/include/set_cover_solver/: set_cover_solver.h
exploration_planner/utils/set_cover_solver/src/: set_cover_solver.cpp  set_cover_solver_test.cpp
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/map_generator/: CMakeLists.txt
uav_simulator/mock_loop/: CMakeLists.txt  package.xml
uav_simulator/mock_loop/src/: mock_loop.cpp
uav_simulator/poscmd_2_odom/: CMakeLists.txt
(+29 files in other folders)
